# OCR-tabber

./: .gitignore  AGENTS.md  CLAUDE.md  DESKTOP_APP_PLAN.md  DEVELOPMENT_PLAN.md  FEATURE_PLAN.md  README.md  pyproject.toml
data/: ASCIItab.txt  mainDB.pkl  mainDB.xml  testDB.xml
db/: mainDB.pkl
src/: chord-recognizer.py  ocr-tab.py  tabDBextractor.py
src/ocr_tabber/: __init__.py  chord_recognizer.py  cli.py  ocr_tab.py  tabDBextractor.py  tab_db_extractor.py
tests/: conftest.py  test_chord_recognizer.py  test_ocr_tab.py  test_tab_db_extractor.py
