[tool.poetry]
name = "ocr-tabber"
version = "0.1.0"
description = "OCR tool for guitar tablature recognition"
authors = ["Utkarsh Jaiswal"]
license = "MIT"
readme = "README.md"
packages = [{include = "ocr_tabber", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
pytesseract = "^0.3.10"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
ocr-tabber = "ocr_tabber.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
