[tool.poetry]
name = "ocr-tabber"
version = "0.1.0"
description = "OCR tool for guitar tablature recognition"
authors = ["Utkarsh Jaiswal"]
license = "MIT"
readme = "README.md"
packages = [{include = "ocr_tabber", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
pytesseract = "^0.3.10"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.9.0"

[tool.poetry.scripts]
ocr-tabber = "ocr_tabber.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"  # ruff doesn't support py314 yet
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ocr_tabber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
